# MRTalk-Motion

./: Dockerfile  README.md  Taskfile.yml  convert.py  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  Taskfile.yml  index.ts  package.json
backend/lib/: db.ts  file.ts  index.ts
backend/src/: index.ts
backend/views/: index.html
fbx2video/src/: main.py
