[project]
name = "mrtalk-motion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bpy>=4.5.1",
    "chromadb>=1.0.17",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.30.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.42.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
